Added HTML button and text box

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,20 @@
     <title>DOM ONLY</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+
+    <form>
+        Type "It Works!" below:
+        <br>
+        <input type="text" class="text-box">
+    </form>
+    <button class="btn2">Click Here to Check</button>
+    <br>
+    <br>
+
     <!-- JavaScript Dependencies -->
     <script src="scripts.js"></script>
 </body>
+
 </html>
