Reorganized output, added Text box which pushes the text input to an alert

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -10,13 +10,12 @@
 </head>
 
 <body>
-
-    <form>
-        Type "It Works!" below:
-        <br>
-        <input type="text" class="text-box">
-    </form>
-    <button class="btn2">Click Here to Check</button>
+    <br>
+    <br> Type "It Works!" below:
+    <br>
+    <input type="text" id="text-box">
+    <br>
+    <button id="btn2">Click Here to Check</button>
     <br>
     <br>
 
