Created div that changes color based on if mouse is over it or not

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -18,6 +18,7 @@
     <button id="btn2">Click Here to Check</button>
     <br>
     <br>
+    <div id="divHover"></div>
 
     <!-- JavaScript Dependencies -->
     <script src="scripts.js"></script>
