Created a paragraph that changes random colors

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -19,6 +19,9 @@
     <br>
     <br>
     <div id="divHover"></div>
+    <br>
+    <br>
+    <p id="RandomColorP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eaque numquam perferendis commodi sed accusamus sapiente, a harum deleniti nobis saepe, ducimus aliquid dicta, nulla debitis aliquam veniam exercitationem error!</p>
 
     <!-- JavaScript Dependencies -->
     <script src="scripts.js"></script>
