Added a ul and a button that when clicked would add the next friend from an array and stop working once the list end is reached

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -21,7 +21,16 @@
     <div id="divHover"></div>
     <br>
     <br>
-    <p id="RandomColorP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eaque numquam perferendis commodi sed accusamus sapiente, a harum deleniti nobis saepe, ducimus aliquid dicta, nulla debitis aliquam veniam exercitationem error!</p>
+    <p id="RandomColorP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eaque numquam perferendis commodi sed accusamus
+        sapiente, a harum deleniti nobis saepe, ducimus aliquid dicta, nulla debitis aliquam veniam exercitationem error!</p>
+    <br>
+    <br>
+    <button id="addFriendsBtn">Click To Show A Friend!</button>
+    <br>
+    <ul id="friends"></ul>
+    <br>
+    <br>
+
 
     <!-- JavaScript Dependencies -->
     <script src="scripts.js"></script>
